# PitchCheck

./: .dockerignore  .env.example  .gitignore  .graphifyignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  desktop-installers.yml  tribe-image.yml
app/: globals.css  layout.tsx  page.tsx
components/: AutoUpdatePrompt.tsx  BreakdownBar.tsx  DesktopConnectionPanel.tsx  DesktopWorkbench.tsx  PlatformSelector.tsx  RewriteSuggestion.tsx  ScoreDisplay.tsx  ScoreForm.tsx  ScoreGauge.tsx  SetupWizard.tsx  TemporalTrace.tsx
lib/: desktop-runtime.ts  tribe-client.ts
mobile/: .env.example  App.tsx  README.md  app.config.ts  eas.json  package.json  tsconfig.json
mobile/src/: draft-queue.ts  (+6 more)
public/: site.webmanifest
scripts/: build-desktop-installer.mjs  build-desktop-web.mjs  install-local.sh  vast-e2e.mjs
shared/: constants.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tribe_service/: Dockerfile  Dockerfile.local  app.py  auth.py  engine.py  llm_layer.py  native_core.py  patch_tribev2_whisperx.py  persuasion_features.py  requirements.txt  research_synthesis.py  schemas.py
tribe_service/rust_core/: Cargo.toml  README.md  pyproject.toml
tribe_service/rust_core/src/: lib.rs
(+19 files in other folders)
