[package]
name = "pitchcheck-desktop"
version = "0.1.4"
description = "PitchCheck desktop runtime manager"
authors = ["PitchCheck"]
edition = "2021"
license = "UNLICENSED"

[lib]
name = "pitchcheck_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
thiserror = "2"
tokio = { version = "1", features = ["process", "time"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
