[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "pitchcheck-core"
version = "0.1.0"
requires-python = ">=3.10"
description = "Rust acceleration core for PitchCheck TRIBE post-processing"

[tool.maturin]
bindings = "pyo3"
module-name = "_pitchcheck_core"
features = ["extension-module"]
